Add empty Sidebar section. The style and behaviour resizing need work before release, but this will allow us to at least experiment with different navigation layouts.

--- a/_sass/whiteglass/_layout.scss
+++ b/_sass/whiteglass/_layout.scss
@@ -224,3 +224,15 @@
     float: right;
   }
 }
+
+/*
+ * TODO Nicer indentation from left
+ * TODO Stop collision with main body of site, in narrow windows
+ */
+.site-sidebar {
+  float: left;
+
+  .page-link {
+    color: $text-color;
+  }
+}
