--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 
     {% include header.html %}
 
+    {% include sidebar.html %}
+
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
