--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@ TODO Read links from some configuration file
     <ul>
       <li><a class="page-link" href="https://github.com/include-cpp/toolboxes">Toolbox</a></li>
     </ul>
-    <li>Shop:</li>
+    <li>Shop</li>
     <ul>
       <li><a class="page-link" href="https://shop.spreadshirt.com/includecpp">US store</a></li>
       <li><a class="page-link" href="https://shop.spreadshirt.net/includecpp">European store</a></li>
