--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,7 @@ TODO Read links from some configuration file
     </ul>
     <li>Conferences and Events</li>
     <ul>
+      <li><a class="page-link" href="/scholarships/">Scholarships</a></li>
       <li><a class="page-link" href="https://github.com/include-cpp/toolboxes">Toolbox</a></li>
     </ul>
     <li>Shop</li>
