Move existing conference pages to new conferences sub-directory

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,9 +14,9 @@ TODO Read links from some configuration file
     </ul>
     <li>Conferences and Events</li>
     <ul>
-      <li><a class="page-link" href="/attending-conferences/">Attending</a></li>
-      <li><a class="page-link" href="/scholarships/">Scholarships</a></li>
-      <li><a class="page-link" href="/organising-conferences/">Organising</a></li>
+      <li><a class="page-link" href="/conferences/attending-conferences/">Attending</a></li>
+      <li><a class="page-link" href="/conferences/scholarships/">Scholarships</a></li>
+      <li><a class="page-link" href="/conferences/organising-conferences/">Organising</a></li>
       <li><a class="page-link" href="https://github.com/include-cpp/toolboxes">Toolbox</a></li>
     </ul>
     <li><a class="page-link" href="/shop/">Shop</a></li>
