Add conferences home page, to prevent a directory listing being shown for /conferences/

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@ TODO Read links from some configuration file
       <li><a class="page-link" href="/code-of-conduct/">Code of conduct</a></li>
       <li><a class="page-link" href="/moderation/">Moderation</a></li>
     </ul>
-    <li>Conferences and Events</li>
+    <li><a class="page-link" href="/conferences/">Conferences and Events</a></li>
     <ul>
       <li><a class="page-link" href="/conferences/attending-conferences/">Attending</a></li>
       <li><a class="page-link" href="/conferences/scholarships/">Scholarships</a></li>
