Increase font size of level 4 headings

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -88,6 +88,10 @@ body {
     border-bottom: 1px solid $border-color;
   }
 
+  h4 {
+    font-size: 0.8125em;
+  }
+
 	h1, h2, h3, h4, h5, h6 {
 		.header-link {
 			position: relative;
