Update font-size for headers

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -83,13 +83,30 @@ body {
 }
 
 .page__content {
+  h1 {
+    font-size: 2em;
+  }
+
   h2 {
+    font-size: 1.5em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
   }
 
+  h3 {
+    font-size: 1.17em;
+  }
+
   h4 {
-    font-size: 0.8125em;
+    font-size: 1em;
+  }
+
+  h5 {
+    font-size: .83em;
+  }
+
+  h6 {
+    font-size: .67em;
   }
 
 	h1, h2, h3, h4, h5, h6 {
